artifacts/patches/eval/s2-structural/java_47_s2_runs_3_patches/run-3/eval/workdir/mockito/mockito/evals/pr-3220/fix-patch-run.log
Picked up JAVA_TOOL_OPTIONS: -Dfile.encoding=UTF-8 -Duser.timezone=Asia/Shanghai
Starting a Gradle Daemon, 1 incompatible and 1 stopped Daemons could not be reused, use --status for details

> Configure project :
Building version '5.9.1-SNAPSHOT'
  - reason: shipkit-auto-version deduced snapshot based on tag: 'v5.9.0'

> Task :junitJupiterExtensionTest:compileJava NO-SOURCE
> Task :errorprone:processResources NO-SOURCE
> Task :junitJupiterParallelTest:compileJava NO-SOURCE
> Task :memory-test:processResources NO-SOURCE
> Task :groovyTest:compileJava NO-SOURCE
> Task :groovyInlineTest:compileJava NO-SOURCE
> Task :errorprone:processTestResources NO-SOURCE
> Task :inlineTest:processResources NO-SOURCE
> Task :module-test:processResources NO-SOURCE
> Task :junit-jupiter:processResources NO-SOURCE
> Task :module-test:processTestResources NO-SOURCE
> Task :java21:processResources NO-SOURCE
> Task :memory-test:processTestResources NO-SOURCE
> Task :junit-jupiter:processTestResources NO-SOURCE
> Task :extTest:compileJava NO-SOURCE
> Task :junitJupiterInlineMockMakerExtensionTest:compileJava NO-SOURCE
> Task :junitJupiterExtensionTest:processResources NO-SOURCE
> Task :java21:processTestResources NO-SOURCE
> Task :junitJupiterParallelTest:processResources NO-SOURCE
> Task :junitJupiterParallelTest:classes UP-TO-DATE
> Task :groovyTest:compileGroovy NO-SOURCE
> Task :kotlinTest:checkKotlinGradlePluginConfigurationErrors
> Task :kotlinReleaseCoroutinesTest:checkKotlinGradlePluginConfigurationErrors
> Task :inlineTest:processTestResources NO-SOURCE
> Task :junitJupiterExtensionTest:classes UP-TO-DATE
> Task :junitJupiterInlineMockMakerExtensionTest:processResources NO-SOURCE
> Task :android:processResources UP-TO-DATE
> Task :subclass:processResources UP-TO-DATE
> Task :extTest:processResources NO-SOURCE
> Task :extTest:classes UP-TO-DATE
> Task :groovyTest:processResources NO-SOURCE
> Task :junitJupiterParallelTest:processTestResources UP-TO-DATE
> Task :groovyInlineTest:compileGroovy NO-SOURCE
> Task :proxy:processResources UP-TO-DATE
> Task :groovyTest:classes UP-TO-DATE
> Task :junitJupiterInlineMockMakerExtensionTest:classes UP-TO-DATE
> Task :programmatic-test:processResources NO-SOURCE
> Task :android:processTestResources NO-SOURCE
> Task :kotlinReleaseCoroutinesTest:compileKotlin NO-SOURCE
> Task :junitJupiterExtensionTest:processTestResources UP-TO-DATE
> Task :groovyInlineTest:processResources NO-SOURCE
> Task :groovyInlineTest:classes UP-TO-DATE
> Task :subclass:processTestResources NO-SOURCE
> Task :proxy:processTestResources NO-SOURCE
> Task :programmatic-test:processTestResources NO-SOURCE
> Task :groovyTest:processTestResources NO-SOURCE
> Task :groovyInlineTest:processTestResources NO-SOURCE
> Task :kotlinTest:compileKotlin NO-SOURCE
> Task :kotlinTest:compileJava NO-SOURCE
> Task :kotlinReleaseCoroutinesTest:compileJava NO-SOURCE
> Task :kotlinTest:processResources NO-SOURCE
> Task :kotlinTest:classes UP-TO-DATE
> Task :kotlinReleaseCoroutinesTest:processResources NO-SOURCE
> Task :kotlinReleaseCoroutinesTest:classes UP-TO-DATE
> Task :extTest:processTestResources UP-TO-DATE
> Task :junitJupiterInlineMockMakerExtensionTest:processTestResources UP-TO-DATE
> Task :kotlinTest:processTestResources UP-TO-DATE
> Task :kotlinReleaseCoroutinesTest:processTestResources UP-TO-DATE
> Task :osgi-test:compileOtherBundleJava UP-TO-DATE
> Task :osgi-test:processOtherBundleResources NO-SOURCE
> Task :osgi-test:otherBundleClasses UP-TO-DATE
> Task :osgi-test:otherBundle
> Task :osgi-test:processTestBundleResources NO-SOURCE
> Task :osgi-test:compileJava NO-SOURCE
> Task :osgi-test:processResources NO-SOURCE
> Task :osgi-test:classes UP-TO-DATE
> Task :osgi-test:processTestResources NO-SOURCE

> Task :compileJava
Picked up JAVA_TOOL_OPTIONS: -Dfile.encoding=UTF-8 -Duser.timezone=Asia/Shanghai
/home/mockito/src/main/java/org/mockito/internal/framework/MockitoCore.java:200: error: <T>MockedStaticImpl(StaticMockControl<T>) has protected access in MockedStaticImpl
        return new MockedStaticImpl<>(control);
               ^
  where T is a type-variable:
    T extends Object declared in class MockedStaticImpl
/home/mockito/src/main/java/org/mockito/internal/framework/MockitoCore.java:231: error: <T>MockedConstructionImpl(ConstructionMockControl<T>) has protected access in MockedConstructionImpl
        return new MockedConstructionImpl<>(control);
               ^
  where T is a type-variable:
    T extends Object declared in class MockedConstructionImpl
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: /home/mockito/src/main/java/org/mockito/internal/configuration/plugins/DefaultMockitoPlugins.java uses or overrides a deprecated API that is marked for removal.
Note: Recompile with -Xlint:removal for details.
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
2 errors

> Task :compileJava FAILED

Deprecated Gradle features were used in this build, making it incompatible with Gradle 9.0.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/8.5/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.
14 actionable tasks: 4 executed, 10 up-to-date

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
> Run with --info option to get more log output.

BUILD FAILED in 30s
